tests: swapped list.of with array.asList